# Optimo-Algo

./: .gitignore  .optimo-algo.json  README.md  THEORY.md  context.toon  gui.py  main.py  optimo.py  pyproject.toml  requirements.txt  test_ollama.py
src/: __init__.py  compiler.py  config.py  llm.py  scanner.py  visualizer.py
