[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optimo-algo"
version = "1.0.0"
description = "A bridging layer for AI coding agents to reduce token usage."
dependencies = [
    "ollama>=0.4.4",
    "pydantic>=2.10.3",
    "rich>=13.9.4",
    "pathspec>=0.12.1",
    "customtkinter>=5.2.2",
    "watchdog>=6.0.0",
    "tiktoken>=0.9.0",
]

[project.scripts]
optimo = "optimo:main"

[tool.setuptools]
py-modules = ["optimo"]
packages = ["src"]
